fixed wrap issue on relationships div

--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -54,7 +54,8 @@
 .relationships {
     display: flex;
     justify-content: flex-start;
-    /* width: 100%; */
+    flex-wrap: wrap;
+    width: 85%;
     height: auto;
     margin: 10px 20px;
 }
